--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .card-border {
-	box-shadow: 8px 8px 0px 0px rgba(230,230,230,0.7);
+	box-shadow: 8px 8px 0 0 rgba(230,230,230,0.7);
 	border: 1px solid lightgrey;
 	width: 310px;
 	padding: 15px 7.5px 15px 15px;
@@ -9,13 +9,13 @@
 .image-size {
 	width: 300px;
 	height: 200px;
-	padding: 15px 15px 15px 0px;
+	padding: 15px 15px 15px 0;
 }
 
 .text-border {
 	border: 1px solid lightgrey;
 	width: 268px;
-	padding: 0px 15px 15px 15px;
+	padding: 0 15px 15px;
 	text-align: justify;
 }
 
@@ -24,7 +24,7 @@
 }
 
 ul {
-	padding: 0px 15px 0px 0px;
+	padding: 0 15px;
 }
 
 li {
